--- a/app/app/views/podcasts/edit.html.erb
+++ b/app/app/views/podcasts/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing podcast</h1>
 
-<%= render 'form' %>
+<%= render 'edit_form' %>
 
 <%= link_to 'Show', @podcast %> |
 <%= link_to 'Back', podcasts_path %>
