add update_single_feed add update_all_feeds

--- a/app/app/views/podcasts/show.html.erb
+++ b/app/app/views/podcasts/show.html.erb
@@ -37,6 +37,7 @@
 
 <h2>All episodes of this podcast</h2>
 
+<%= link_to 'Update Episodes', controller: 'podcasts', action: 'update_feed', id: @podcast.id %>
 <table>
   <thead>
     <tr>
