--- a/app/app/views/podcasts/index.html.erb
+++ b/app/app/views/podcasts/index.html.erb
@@ -37,3 +37,4 @@
 <br>
 
 <%= link_to 'New Podcast', new_podcast_path %>
+<%= link_to 'Update All Feeds', controller: 'podcasts', action: 'update_all_feeds' %>
