show episode and podcast images to see if the links are correct

--- a/app/app/views/podcasts/index.html.erb
+++ b/app/app/views/podcasts/index.html.erb
@@ -21,7 +21,7 @@
       <tr>
         <td><%= podcast.title %></td>
         <td><%= podcast.description %></td>
-        <td><%= podcast.logo_url %></td>
+        <td><%= podcast.logo_url %><img src="<%= podcast.logo_url %>" style="height: 100px" /></td>
         <td><%= podcast.website %></td>
         <td><%= podcast.feed %></td>
         <td><%= podcast.tags %></td>
