--- a/app/app/views/podcasts/show.html.erb
+++ b/app/app/views/podcasts/show.html.erb
@@ -1,4 +1,6 @@
 
+<img src="<%= @podcast.logo_url %>" style="height: 100px" />
+
 <p>
   <strong>Title:</strong>
   <%= @podcast.title %>
@@ -75,7 +77,7 @@
         <td><%= episode.duration %></td>
         <td><%= episode.flattr_url %></td>
         <td><%= episode.tags %></td>
-        <td><%= episode.icon_url %></td>
+        <td><%= episode.icon_url %><img src="<%= episode.icon_url %>" style="height: 100px" /></td>
         <td><%= episode.audio_file_url %></td>
         <td><%= episode.cached %></td>
         <td><%= episode.local_path %></td>
