--- a/app/app/views/podcasts/index.html.erb
+++ b/app/app/views/podcasts/index.html.erb
@@ -1,5 +1,8 @@
 <h1>Listing podcasts</h1>
 
+<%= link_to 'New Podcast', new_podcast_path, class: 'button success' %>
+<%= link_to 'Check for new Episodes', {controller: 'podcasts', action: 'update_all_feeds'}, class: 'button' %>
+
 <table>
   <thead>
     <tr>
@@ -35,6 +38,3 @@
 </table>
 
 <br>
-
-<%= link_to 'New Podcast', new_podcast_path %>
-<%= link_to 'Update All Feeds', controller: 'podcasts', action: 'update_all_feeds' %>
