add option to download an episode in background

--- a/app/app/views/podcasts/show.html.erb
+++ b/app/app/views/podcasts/show.html.erb
@@ -62,6 +62,7 @@
       <th></th>
       <th></th>
       <th></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -81,6 +82,7 @@
         <td><%= episode.audio_file_url %></td>
         <td><%= episode.cached %></td>
         <td><%= episode.local_path %></td>
+        <td><%= link_to 'Download', controller: 'episodes', action: 'download', id: episode.id %></td>
         <td><%= link_to 'Show', episode %></td>
         <td><%= link_to 'Edit', edit_episode_path(episode) %></td>
         <td><%= link_to 'Destroy', episode, method: :delete, data: { confirm: 'Are you sure?' } %></td>
