--- a/app/app/views/podcasts/show.html.erb
+++ b/app/app/views/podcasts/show.html.erb
@@ -42,7 +42,8 @@
 <h2>All episodes of this podcast</h2>
 
 <%= link_to 'Check for new Episodes', {controller: 'podcasts', action: 'update_feed', id: @podcast.id}, class: 'button success'%>
-<%= link_to 'Delete All Episodes', {controller: 'podcasts', action: 'delete_all_episodes', id: @podcast.id}, class: 'button alert' %>
+<%= link_to 'Delete All Episodes (only DB)', {controller: 'podcasts', action: 'delete_all_episodes', id: @podcast.id}, class: 'button alert' %>
+<%= link_to 'Download All Episodes', {controller: 'podcasts', action: 'download_all_episodes', id: @podcast.id}, class: 'button' %>
 <table>
   <thead>
     <tr>
