--- a/app/app/views/podcasts/show.html.erb
+++ b/app/app/views/podcasts/show.html.erb
@@ -84,6 +84,7 @@
         <td><%= episode.cached %></td>
         <td><%= episode.local_path %></td>
         <td><%= link_to 'Download', controller: 'episodes', action: 'download', id: episode.id %></td>
+        <td><%= link_to 'Delete Cached File', controller: 'episodes', action: 'delete_cached_file', id: episode.id %></td>
         <td><%= link_to "Play Next", controller: "episodes", action: "play", id: episode.id %></td>
         <td><%= link_to 'Show', episode %></td>
         <td><%= link_to 'Edit', edit_episode_path(episode) %></td>
