--- a/app/app/views/layouts/application.html.erb
+++ b/app/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
     <% if !flash.blank? %>
     <div class="row">
       <div class="medium-12 columns">
+        <!-- TODO add alert and notice for devise -->
         <% if flash[:error] %>
           <div class="alert-box alert"><%= flash[:error] %></div>
         <% end %>
