--- a/app/app/views/layouts/application.html.erb
+++ b/app/app/views/layouts/application.html.erb
@@ -31,6 +31,16 @@
     </div>
     <% end %>
 
+    <% if admin_signed_in? %>
+    <li>
+      <%= link_to('Logout', destroy_admin_session_path, :method => :delete) %>        
+    </li>
+    <% else %>
+    <li>
+      <%= link_to('Login', new_admin_session_path)  %>  
+    </li>
+    <% end %>
+
     <%= yield %>
     <%= javascript_include_tag "application" %>
   </body>
