--- a/app/app/views/layouts/application.html.erb
+++ b/app/app/views/layouts/application.html.erb
@@ -31,15 +31,8 @@
     </div>
     <% end %>
 
-    <% if admin_signed_in? %>
-    <li>
-      <%= link_to('Logout', destroy_admin_session_path, :method => :delete) %>        
-    </li>
-    <% else %>
-    <li>
-      <%= link_to('Login', new_admin_session_path)  %>  
-    </li>
-    <% end %>
+    <%= render 'devise/menu/registration_items' %>
+    <%= render 'devise/menu/login_items' %>
 
     <%= yield %>
     <%= javascript_include_tag "application" %>
