add author to podcast

--- a/app/app/views/podcasts/show.html.erb
+++ b/app/app/views/podcasts/show.html.erb
@@ -48,6 +48,7 @@
     <tr>
       <th>Title</th>
       <th>Link</th>
+      <th>Author</th>
       <th>Pub date</th>
       <th>Guid</th>
       <th>Subtitle</th>
@@ -72,6 +73,7 @@
       <tr>
         <td><%= episode.title %></td>
         <td><%= episode.link %></td>
+        <td><%= episode.author %></td>
         <td><%= episode.pub_date %></td>
         <td><%= episode.guid %></td>
         <td><%= episode.subtitle %></td>
