--- a/app/app/views/podcasts/index.html.erb
+++ b/app/app/views/podcasts/index.html.erb
@@ -7,6 +7,7 @@
   <thead>
     <tr>
       <th>Title</th>
+      <th>Author</th>
       <th>Description</th>
       <th>Logo url</th>
       <th>Website</th>
@@ -23,6 +24,7 @@
     <% @podcasts.each do |podcast| %>
       <tr>
         <td><%= podcast.title %></td>
+        <td><%= podcast.author %></td>
         <td><%= podcast.description %></td>
         <td><%= podcast.logo_url %><img src="<%= podcast.logo_url %>" style="height: 100px" /></td>
         <td><%= podcast.website %></td>
