--- a/app/app/views/podcasts/show.html.erb
+++ b/app/app/views/podcasts/show.html.erb
@@ -6,6 +6,10 @@
 </p>
 
 <p>
+<p>
+  <strong>Author:</strong>
+  <%= @podcast.author %>
+</p>
   <strong>Description:</strong>
   <%= @podcast.description %>
 </p>
@@ -48,7 +52,6 @@
     <tr>
       <th>Title</th>
       <th>Link</th>
-      <th>Author</th>
       <th>Pub date</th>
       <th>Guid</th>
       <th>Subtitle</th>
@@ -73,7 +76,6 @@
       <tr>
         <td><%= episode.title %></td>
         <td><%= episode.link %></td>
-        <td><%= episode.author %></td>
         <td><%= episode.pub_date %></td>
         <td><%= episode.guid %></td>
         <td><%= episode.subtitle %></td>
