add subtitle and language to podcast

--- a/app/app/views/podcasts/show.html.erb
+++ b/app/app/views/podcasts/show.html.erb
@@ -6,10 +6,21 @@
 </p>
 
 <p>
+  <strong>Subtitle:</strong>
+  <%= @podcast.subtitle %>
+</p>
+
+<p>
+  <strong>Language:</strong>
+  <%= @podcast.language %>
+</p>
+
 <p>
   <strong>Author:</strong>
   <%= @podcast.author %>
 </p>
+
+<p>
   <strong>Description:</strong>
   <%= @podcast.description %>
 </p>
