--- a/app/app/views/podcasts/index.html.erb
+++ b/app/app/views/podcasts/index.html.erb
@@ -7,6 +7,8 @@
   <thead>
     <tr>
       <th>Title</th>
+      <th>Subtitle</th>
+      <th>Language</th>
       <th>Author</th>
       <th>Description</th>
       <th>Logo url</th>
@@ -24,6 +26,8 @@
     <% @podcasts.each do |podcast| %>
       <tr>
         <td><%= podcast.title %></td>
+        <td><%= podcast.subtitle %></td>
+        <td><%= podcast.language %></td>
         <td><%= podcast.author %></td>
         <td><%= podcast.description %></td>
         <td><%= podcast.logo_url %><img src="<%= podcast.logo_url %>" style="height: 100px" /></td>
