--- a/app/app/views/podcasts/_edit_form.html.erb
+++ b/app/app/views/podcasts/_edit_form.html.erb
@@ -16,6 +16,18 @@
     <%= f.text_field :title %>
   </div>
   <div class="field">
+    <%= f.label :subtitle %><br>
+    <%= f.text_field :subtitle %>
+  </div>
+  <div class="field">
+    <%= f.label :author %><br>
+    <%= f.text_field :author %>
+  </div>
+  <div class="field">
+    <%= f.label :language %><br>
+    <%= f.text_field :language %>
+  </div>
+  <div class="field">
     <%= f.label :description %><br>
     <%= f.text_area :description %>
   </div>
