print episode content as RAW to render the included html

--- a/app/app/views/podcasts/show.html.erb
+++ b/app/app/views/podcasts/show.html.erb
@@ -90,7 +90,7 @@
         <td><%= episode.pub_date %></td>
         <td><%= episode.guid %></td>
         <td><%= episode.subtitle %></td>
-        <td><%= episode.content %></td>
+        <td><%= raw episode.content %></td>
         <td><%= episode.duration %></td>
         <td><%= episode.flattr_url %></td>
         <td><%= episode.tags %></td>
