--- a/app/app/views/playlist_management/index.html.erb
+++ b/app/app/views/playlist_management/index.html.erb
@@ -7,53 +7,21 @@
 <div class="row">
 	<div class="medium-3 columns playlist">
 		<div class="playlist" style="background: red; height: 600px; overflow-y: scroll">
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
-			<div>element</div>
+		<% @playlist_entries.each do |entry| %>
+			<div><%= entry.episode.title %></div>
+		<% end %>
 		</div>
 	</div>
-	<div class="medium-9 columns" style="background: gray">
-		Verzeichnis
+	<div class="medium-9 columns">
+        <ul class="small-block-grid-3 large-block-grid-3">
+        <% @episodes.each do |episode| %>
+          <li>
+                <img src="<%= episode.icon_url %>">
+                <h5><%= episode.title %></h5>
+                <p><%= first_x_words(episode.subtitle) %></p>
+                <%= link_to 'Add', episode, class: 'button small success' %>
+          </li>
+        <% end %>
+        </ul>
 	</div>
 </div>
