--- a/app/app/views/playlist_management/index.html.erb
+++ b/app/app/views/playlist_management/index.html.erb
@@ -6,11 +6,12 @@
 
 <div class="row">
 	<div class="medium-3 columns playlist">
-		<div class="playlist" style="background: red; height: 600px; overflow-y: scroll">
+		<div class="playlist" style="background: #eee; height: 600px; overflow-y: scroll">
 		<% @playlist_entries.each do |entry| %>
 			<div><%= entry.episode.title %></div>
 		<% end %>
 		</div>
+		<div class="button" style="width:100%">Apply</div>
 	</div>
 	<div class="medium-9 columns">
         <ul class="small-block-grid-3 large-block-grid-3">
