fix design of directory search

--- a/app/app/views/directory/_podcasts.html.erb
+++ b/app/app/views/directory/_podcasts.html.erb
@@ -1,4 +1,4 @@
-<ul class="small-block-grid-3 large-block-grid-5">
+<ul class="small-block-grid-3 medium-block-grid-4 large-block-grid-5">
 	<% @podcasts.each do |podcast| %>
 	<li>
 		<a href="<%= directory_show_podcast_url(podcast.id) %>">
