use ransack to do search. remove searching episodes

--- a/app/app/views/directory/index.js.erb
+++ b/app/app/views/directory/index.js.erb
@@ -1,1 +1,1 @@
-$('#results').html('<%= escape_javascript(render "podcasts") %>');
+$('#results-podcasts').html('<%= escape_javascript(render "podcasts") %>');
