--- a/app/app/views/directory/_searchbar.html.erb
+++ b/app/app/views/directory/_searchbar.html.erb
@@ -1,14 +1,14 @@
 <div id="searchbar" class="row">
 	<div class="large-6 medium-9 small-centered columns">
-		<%= form_tag directory_path, remote: true, :method => 'get' do %>
-		<div class="row collapse">
-			<div class="medium-10 columns">
-				<%= text_field_tag :search, params[:search], :placeholder => "Verzeichnis durchsuchen", :id => "search-input-field" %>
+		<%= search_form_for @podcast_query, url: directory_path, method: :get, remote: true do |f| %>
+			<div class="row collapse">
+				<div class="medium-10 columns">
+					<%= f.text_field :title_or_subtitle_cont, :placeholder => "Verzeichnis durchsuchen", :id => "search-input-field" %>
+				</div>
+				<div class="medium-2 columns hide-for-small">
+					<%= f.submit "Search", :class => "prefix button" %>
+				</div>
 			</div>
-			<div class="medium-2 columns hide-for-small">
-				<%= submit_tag "Search", :name => nil, :class => "prefix button" %>
-			</div>
-		</div>
 		<% end %>
 	</div>
 </div>
