--- a/app/app/views/directory/index.html.erb
+++ b/app/app/views/directory/index.html.erb
@@ -2,7 +2,20 @@
 	<div class="medium-12 columns">
 		<h1>Podcast Verzeichnis</h1>
 
-		<%= render 'searchbar' %>
+		<div id="searchbar" class="row">
+			<div class="large-6 medium-9 small-centered columns">
+				<%= search_form_for @podcast_query, url: directory_path, method: :get, remote: true do |f| %>
+					<div class="row collapse">
+						<div class="medium-10 columns">
+							<%= f.text_field :title_or_subtitle_cont, :placeholder => "Verzeichnis durchsuchen", :id => "search-input-field" %>
+						</div>
+						<div class="medium-2 columns hide-for-small">
+							<%= f.submit "Search", :class => "prefix button" %>
+						</div>
+					</div>
+				<% end %>
+			</div>
+		</div>
 
 		<div id="results-podcasts"><%= render 'podcasts' %></div>
 		<div class="pagination-centered">
