--- a/app/app/views/directory/show_podcast.html.erb
+++ b/app/app/views/directory/show_podcast.html.erb
@@ -13,15 +13,21 @@
 <div class="row">
 	<div class="medium-12 columns">
 
-		<ul class="small-block-grid-3 large-block-grid-5">
-			<% @episodes.each do |episode| %>
-			<li>
-				<a href="<%= directory_show_episode_url(episode.id) %>">
-					<img src="<%= episode.icon_url.blank? ? @podcast.logo_url : episode.icon_url %>" />
-				</a>
-				<h5><%= episode.title %></h5>
-			</li>
-			<% end %>
-		</ul>
+		<div id="searchbar" class="row">
+			<div class="large-6 medium-9 small-centered columns">
+				<%= search_form_for @episodes_query, url: directory_show_podcast_url(@podcast.id), remote: true, method: :get do |f| %>
+					<div class="row collapse">
+						<div class="medium-10 columns">
+							<%= f.text_field :title_or_subtitle_cont, :placeholder => "Episoden durchsuchen", :id => "search-input-field" %>
+						</div>
+						<div class="medium-2 columns hide-for-small">
+							<%= f.submit "Search", :class => "prefix button" %>
+						</div>
+					</div>
+				<% end %>
+			</div>
+		</div>
+
+		<div id="results-episodes"><%= render 'episodes' %></div>
 	</div>
 </div>
