put podcast icon as fallback into the model

--- a/app/app/views/episodes/index.html.erb
+++ b/app/app/views/episodes/index.html.erb
@@ -34,7 +34,7 @@
         <td><%= episode.duration %></td>
         <td><%= episode.flattr_url %></td>
         <td><%= episode.tags %></td>
-        <td><%= episode.icon_url %></td>
+        <td><%= episode.icon_url_podcast_fallback %></td>
         <td><%= episode.audio_file_url %></td>
         <td><%= episode.cached %></td>
         <td><%= episode.local_path %></td>
