--- a/app/app/views/podcasts/show.html.erb
+++ b/app/app/views/podcasts/show.html.erb
@@ -94,7 +94,7 @@
         <td><%= episode.duration %></td>
         <td><%= episode.flattr_url %></td>
         <td><%= episode.tags %></td>
-        <td><%= episode.icon_url %><img src="<%= episode.icon_url %>" style="height: 100px" /></td>
+        <td><%= episode.icon_url_podcast_fallback %><img src="<%= episode.icon_url_podcast_fallback %>" style="height: 100px" /></td>
         <td><%= episode.audio_file_url %></td>
         <td><%= episode.filesize %></td>
         <td><%= episode.cached %></td>
