--- a/app/app/views/directory/_episodes.html.erb
+++ b/app/app/views/directory/_episodes.html.erb
@@ -2,7 +2,7 @@
 	<% @episodes.each do |episode| %>
 	<li>
 		<a href="<%= directory_show_episode_url(episode.id) %>">
-			<img src="<%= episode.icon_url.blank? ? @podcast.logo_url : episode.icon_url %>" />
+			<img src="<%= episode.icon_url_podcast_fallback %>" />
 		</a>
 		<h5><%= episode.title %></h5>
 	</li>
