--- a/app/app/views/directory/show_episode.html.erb
+++ b/app/app/views/directory/show_episode.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="medium-3 columns">
-		<img src="<%= @episode.icon_url.blank? ? @podcast.logo_url : @episode.icon_url %>" />
+		<img src="<%= @episode.icon_url_podcast_fallback %>" />
 	</div>
 	<div class="medium-9 columns">
 		<h1><%= @episode.title %></h1>
