create uniform search in directory

--- a/app/app/views/directory/index.js.erb
+++ b/app/app/views/directory/index.js.erb
@@ -1,1 +1,1 @@
-$('#results-podcasts').html('<%= escape_javascript(render "podcasts") %>');
+$('#results').html('<%= escape_javascript(render "results") %>');
