--- a/app/app/views/directory/_results.html.erb
+++ b/app/app/views/directory/_results.html.erb
@@ -7,12 +7,12 @@
 			<a href="<%= directory_show_episode_url(result.id) %>">
 		<% end %>
 		<img src="<%= result.image_url %>" /></a>
-		
+
 		<h5><%= result.title %></h5>
 		<p><%= first_x_words result.subtitle %></p>
 	</li>
 	<% end %>
 </ul>
 <div class="pagination-centered">
-	<%= will_paginate @results, :param_name => 'podcasts_page',  renderer: FoundationPagination::Rails %> 
+	<%= will_paginate @results, :param_name => 'page',  renderer: FoundationPagination::Rails %> 
 </div>
