--- a/app/app/views/sidekiq_status/_status.html.erb
+++ b/app/app/views/sidekiq_status/_status.html.erb
@@ -1,1 +1,3 @@
-<%= @status %>
+<div>Status: <%= @status %></div>
+<div>Downloaded: <%= @done %> / <%= @total %></div>
+<div>Progress: <%= @percentage %>%</div>
