--- a/app/app/views/sidekiq_status/status.js.erb
+++ b/app/app/views/sidekiq_status/status.js.erb
@@ -1,2 +1,2 @@
-$('#status-info').html('<%= escape_javascript(render "status") %>');
+$('#status-info-<%= @job_id %>').html('<%= escape_javascript(render "status") %>');
 window.job_<%= @job_id %> = <%= Sidekiq::Status::complete? @job_id %>;
