only show add button if episode is cached already

--- a/app/app/views/playlist_management/index.html.erb
+++ b/app/app/views/playlist_management/index.html.erb
@@ -25,7 +25,11 @@
                 <img src="<%= episode.icon_url %>">
                 <h5><%= episode.title %></h5>
                 <p><%= first_x_words(episode.subtitle) %></p>
-				<%= link_to 'Add', {controller: 'playlist_management', action: 'create_entry', episode_id: episode.id, channel_playlist: @channel_playlist.id}, class: 'button small success'%>
+                <% if episode.cached? %>
+					<%= link_to 'Add', {controller: 'playlist_management', action: 'create_entry', episode_id: episode.id, channel_playlist: @channel_playlist.id}, class: 'button small'%>
+				<% else %>
+					<%= link_to 'Download', {controller: 'episodes', action: 'download', id: episode.id}, class: 'button small success' %>
+				<% end %>
           </li>
         <% end %>
         </ul>
