make playlist a panel

--- a/app/app/views/playlist_management/index.html.erb
+++ b/app/app/views/playlist_management/index.html.erb
@@ -7,7 +7,7 @@
 
 <div class="row">
 	<div class="medium-4 columns playlist">
-		<div id="playlist" style="background: #eee; height: 600px; overflow-y: scroll">
+		<div id="playlist" class="panel" style="height: 600px; overflow-y: scroll">
 		<% @playlist_entries.each do |entry| %>
 			<div>
 				<%= entry.start_time %>, 
