--- a/app/app/views/playlist_management/index.html.erb
+++ b/app/app/views/playlist_management/index.html.erb
@@ -14,8 +14,10 @@
 					<div><%= entry.episode.title %></div>
 					<div><%= entry.start_time %></div>
 					<div><%= entry.end_time %></div>
-					<div><%= link_to 'Remove', {controller: 'playlist_management', action: 'destroy_entry', playlist_entry_id: entry.id, channel_playlist: @channel_playlist.id}, class: 'button alert tiny'%></div>
 					<div>Time left: <%= entry.time_left %> seconds</div>
+					<% if !entry.isLive? %>
+						<div><%= link_to 'Remove', {controller: 'playlist_management', action: 'destroy_entry', playlist_entry_id: entry.id, channel_playlist: @channel_playlist.id}, class: 'button alert tiny'%></div>
+					<% end %>
 				</div>
 				<hr/>
 			</div>
