the index action cuts of entries by their start_time. therefore save the position offset to use it in the sort action

--- a/app/app/views/playlist_management/index.html.erb
+++ b/app/app/views/playlist_management/index.html.erb
@@ -9,7 +9,7 @@
 	<div class="medium-4 columns">
 		<div class="panel" style="height: 600px; overflow-y: scroll">
 
-			<ul id="playlist-entry-list" data-update-url="<%= sort_playlist_entries_url%>">
+			<ul id="playlist-entry-list" data-update-url="<%= sort_playlist_entries_url(offset: @playlist_entries.first.position)%>">
 				<% @playlist_entries.each do |entry| %>
 					<%= content_tag_for :li, entry do %>
 						<span class="handle">drag</span>
