--- a/app/app/views/playlist_management/index.html.erb
+++ b/app/app/views/playlist_management/index.html.erb
@@ -12,19 +12,23 @@
 		</div>
 	</div>
 	<div class="medium-8 columns">
-        <ul class="small-block-grid-3 large-block-grid-3">
-        <% @episodes.each do |episode| %>
-          <li>
-                <img src="<%= episode.icon_url_podcast_fallback %>">
-                <h5><%= episode.title %></h5>
-                <p><%= first_x_words(episode.subtitle) %></p>
-                <% if episode.cached? %>
-					<%= link_to 'Add', {controller: 'playlist_management', action: 'create_entry', remote: true, episode_id: episode.id, channel_playlist: @channel_playlist.id}, class: 'button small'%>
-				<% else %>
-					<%= link_to 'Download', {controller: 'episodes', action: 'download', id: episode.id}, class: 'button small success' %>
+
+		<div id="searchbar" class="row">
+			<div class="small-12 columns">
+				<%= search_form_for @query, url: playlist_management_search_path(channel_playlist: @channel_playlist.id), method: :get, remote: true do |f| %>
+					<div class="row collapse">
+						<div class="medium-10 columns">
+							<%= f.text_field :title_or_subtitle_cont, :placeholder => "Verzeichnis durchsuchen", :id => "search-input-field" %>
+						</div>
+						<div class="medium-2 columns hide-for-small">
+							<%= f.submit "Search", :class => "prefix button" %>
+						</div>
+					</div>
 				<% end %>
-          </li>
-        <% end %>
-        </ul>
+			</div>
+		</div>
+
+		<div id="results"><%= render 'results' %></div>
+
 	</div>
 </div>
