--- a/app/app/views/playlist_management/_playlist.html.erb
+++ b/app/app/views/playlist_management/_playlist.html.erb
@@ -8,7 +8,7 @@
 			<div><%= entry.episode.title %></div>
 			<div><%= entry.start_time %></div>
 			<div><%= entry.end_time %></div>
-				<div>Time left: <%= entry.time_left %> seconds</div>
+				<div>Time left: <%= entry.time_left_human %></div>
 			<% if !entry.isLive? %>
 				<div><%= link_to 'Remove', {controller: 'playlist_management', action: 'destroy_entry', remote: true, playlist_entry_id: entry.id, channel_playlist: @channel_playlist.id}, class: 'button alert tiny'%></div>
 			<% end %>
