--- a/app/app/views/playlist_management/index.html.erb
+++ b/app/app/views/playlist_management/index.html.erb
@@ -15,7 +15,7 @@
 
 		<div id="searchbar" class="row">
 			<div class="small-12 columns">
-				<%= search_form_for @query, url: playlist_management_search_path(channel_playlist: @channel_playlist.id), method: :get, remote: true do |f| %>
+				<%= search_form_for @query, url: playlist_management_path, method: :get, remote: true do |f| %>
 					<div class="row collapse">
 						<div class="medium-10 columns">
 							<%= f.text_field :title_or_subtitle_cont, :placeholder => "Verzeichnis durchsuchen", :id => "search-input-field" %>
