can not sort by playcount or last played

--- a/app/app/views/playlist_management/_results.html.erb
+++ b/app/app/views/playlist_management/_results.html.erb
@@ -10,8 +10,8 @@
 			<th><%= sort_link @query, :title, {}, { :remote => true, :method => :get } %></th>
 			<th><%= sort_link @query, :duration, {}, { :remote => true, :method => :get } %></th>
 			<th><%= sort_link @query, :pub_date, {}, { :remote => true, :method => :get } %></th>
-			<th><%= sort_link @query, :playcount, {}, { :remote => true, :method => :get } %></th>
-			<th><%= sort_link @query, :last_played, {}, { :remote => true, :method => :get } %></th>
+			<th>Playcount</th>
+			<th>Last played</th>
 			<th></th>
 		</tr>
 	</thead>
