--- a/app/app/views/playlist_management/index.html.erb
+++ b/app/app/views/playlist_management/index.html.erb
@@ -7,7 +7,7 @@
 
 <div class="row">
 	<div class="medium-4 columns">
-		<div id="playlist" class="panel" style="height: 600px; overflow-y: scroll">
+		<div id="playlist" style="height: 600px; overflow-y: scroll">
 			<%= render 'playlist' %>
 		</div>
 	</div>
