--- a/app/app/views/playlist_management/index.html.erb
+++ b/app/app/views/playlist_management/index.html.erb
@@ -25,8 +25,10 @@
 						</div>
 					</div>
 					<div class="row">
-						<%= f.check_box :cached_true %>
-						<%= f.label :cached_true %>
+						<div class="medium-12 columns">
+							<%= f.check_box :cached_true %>
+							<%= f.label 'Only show cashed episodes' %>
+						</div>
 					</div>
 				<% end %>
 			</div>
