--- a/app/app/views/layouts/application.html.erb
+++ b/app/app/views/layouts/application.html.erb
@@ -36,5 +36,6 @@
 
     <%= yield %>
     <%= javascript_include_tag "application" %>
+    <%= javascript_include_tag params[:controller] %>
   </body>
 </html>
