--- a/app/app/views/directory/_results.html.erb
+++ b/app/app/views/directory/_results.html.erb
@@ -1,3 +1,6 @@
+<div class="pagination-centered">
+	<%= will_paginate @results, :param_name => 'page',  renderer: FoundationPagination::Rails %> 
+</div>
 <ul class="small-block-grid-3 medium-block-grid-4 large-block-grid-5">
 	<% @results.each do |result| %>
 	<li>
