--- a/app/app/views/layouts/_navigation.html.erb
+++ b/app/app/views/layouts/_navigation.html.erb
@@ -1,7 +1,7 @@
 <nav class="top-bar" data-topbar>
 	<ul class="title-area">
 		<li class="name">
-			<h1><a href="#">My Site</a></h1>
+			<h1><a href="#">ReliveRadio</a></h1>
 		</li>
 		<li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
 	</ul>
@@ -9,18 +9,28 @@
 	<section class="top-bar-section">
 		<!-- Right Nav Section -->
 		<ul class="right">
-			<li class="active"><a href="#">Right Button Active</a></li>
 			<li class="has-dropdown">
-				<a href="#">Right Button Dropdown</a>
+				<a href="#">Account</a>
 				<ul class="dropdown">
-					<li><a href="#">First link in dropdown</a></li>
+					<%= render 'devise/menu/registration_items' %>
+					<%= render 'devise/menu/login_items' %>
 				</ul>
 			</li>
 		</ul>
 
 		<!-- Left Nav Section -->
 		<ul class="left">
-			<li><a href="#">Left Nav Button</a></li>
+			<li><%= link_to 'Directory', :directory %></li>
+			<li class="has-dropdown">
+				<%= link_to 'Playlist Management', channel_playlists_path %>
+				<ul class="dropdown">
+					<% ChannelPlaylist.all.each do |channel_playlist| %>
+						<li><%= link_to channel_playlist.name, playlist_management_path(channel_playlist: channel_playlist.id) %></li>
+					<% end %>
+				</ul>
+			</li>
+			<li><%= link_to 'Podcast Management', podcasts_path %></li>
+			<li><%= link_to 'Background Jobs', sidekiq_path %></li>
 		</ul>
 	</section>
 </nav>
