simplify podcast backend overview

--- a/app/app/views/podcasts/index.html.erb
+++ b/app/app/views/podcasts/index.html.erb
@@ -1,46 +1,42 @@
-<h1>Listing podcasts</h1>
+<div class="row">
+	<div class="medium-12 columns">
+		<h1>Listing podcasts</h1>
 
-<%= link_to 'New Podcast', new_podcast_path, class: 'button success' %>
-<%= link_to 'Check for new Episodes', {controller: 'podcasts', action: 'update_all_feeds'}, class: 'button' %>
+		<%= link_to 'New Podcast', new_podcast_path, class: 'button success' %>
+		<%= link_to 'Check for new Episodes', {controller: 'podcasts', action: 'update_all_feeds'}, class: 'button' %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Subtitle</th>
-      <th>Language</th>
-      <th>Author</th>
-      <th>Description</th>
-      <th>Logo url</th>
-      <th>Website</th>
-      <th>Feed</th>
-      <th>Tags</th>
-      <th>Category</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @podcasts.each do |podcast| %>
-      <tr>
-        <td><%= podcast.title %></td>
-        <td><%= podcast.subtitle %></td>
-        <td><%= podcast.language %></td>
-        <td><%= podcast.author %></td>
-        <td><%= podcast.description %></td>
-        <td><%= podcast.logo_url %><img src="<%= podcast.logo_url %>" style="height: 100px" /></td>
-        <td><%= podcast.website %></td>
-        <td><%= podcast.feed %></td>
-        <td><%= podcast.tags %></td>
-        <td><%= podcast.category %></td>
-        <td><%= link_to 'Show', podcast %></td>
-        <td><%= link_to 'Edit', edit_podcast_path(podcast) %></td>
-        <td><%= link_to 'Destroy', podcast, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+		<table>
+			<thead>
+				<tr>
+					<th></th>
+					<th>Title</th>
+					<th>Author</th>
+					<th>Links</th>
+					<th></th>
+				</tr>
+			</thead>
 
-<br>
+			<tbody>
+				<% @podcasts.each do |podcast| %>
+				<tr>
+					<td><%= image_tag podcast.logo_url, size: '80' %></td>
+					<td><%= link_to podcast.title, podcast %></td>
+					<td><%= podcast.author %></td>
+					<td>
+						<div>Website: <%= podcast.website %></div>
+						<div>Feed: <%= podcast.feed %></div>
+					</td>
+					<td>
+						<p><%= link_to edit_podcast_path(podcast) do %><i class="fa fa-edit"></i> <% end %>
+						<%= link_to podcast, method: :delete, data: { confirm: 'Are you sure?' } do %><i class="fa fa-trash-o"></i> <% end %></p>
+					</td>
+				</tr>
+				<% end %>
+			</tbody>
+		</table>
+
+		
+	</div>
+</div>
+
