--- a/app/app/views/podcasts/show.html.erb
+++ b/app/app/views/podcasts/show.html.erb
@@ -1,111 +1,126 @@
-<img src="<%= @podcast.logo_url %>" style="height: 100px" />
 
-<p>
-  <strong>Title:</strong>
-  <%= @podcast.title %>
-</p>
+<div class="row">
+	<div class="medium-3 columns">
+		<%= image_tag @podcast.logo_url %>
+		<%= link_to 'Edit', edit_podcast_path(@podcast), class: 'button', style: 'width: 100%' %>
+	</div>
+	<div class="medium-9 columns">
+		<h1><%= @podcast.title %></h1>
+		<h2><small><%= @podcast.subtitle %></small></h2>
+		<table>
+			<thead>
+				<tr>
+					<th></th>
+					<th></th>
+				</tr>
+			</thead>
+			<tbody>
 
-<p>
-  <strong>Subtitle:</strong>
-  <%= @podcast.subtitle %>
-</p>
+				<tr>
+					<td><strong>Language:</strong></td>
+					<td><%= @podcast.language %></td>
+				</tr>
 
-<p>
-  <strong>Language:</strong>
-  <%= @podcast.language %>
-</p>
+				<tr>
+					<td><strong>Author:</strong></td>
+					<td><%= @podcast.author %></td>
+				</tr>
 
-<p>
-  <strong>Author:</strong>
-  <%= @podcast.author %>
-</p>
+				<tr>
+					<td><strong>Description:</strong></td>
+					<td><%= @podcast.description %></td>
+				</tr>
 
-<p>
-  <strong>Description:</strong>
-  <%= @podcast.description %>
-</p>
+				<tr>
+					<td><strong>Logo url:</strong></td>
+					<td><%= @podcast.logo_url %></td>
+				</tr>
 
-<p>
-  <strong>Logo url:</strong>
-  <%= @podcast.logo_url %>
-</p>
+				<tr>
+					<td><strong>Website:</strong></td>
+					<td><%= @podcast.website %></td>
+				</tr>
 
-<p>
-  <strong>Website:</strong>
-  <%= @podcast.website %>
-</p>
+				<tr>
+					<td><strong>Feed:</strong></td>
+					<td><%= @podcast.feed %></td>
+				</tr>
 
-<p>
-  <strong>Feed:</strong>
-  <%= @podcast.feed %>
-</p>
+				<tr>
+					<td><strong>Tags:</strong></td>
+					<td><%= @podcast.tags %></td>
+				</tr>
 
-<p>
-  <strong>Tags:</strong>
-  <%= @podcast.tags %>
-</p>
+				<tr>
+					<td><strong>Category:</strong></td>
+					<td><%= @podcast.category %></td>
+				</tr>
+			</tbody>
+		</table>
 
-<p>
-  <strong>Category:</strong>
-  <%= @podcast.category %>
-</p>
+	</div>
+</div>
 
-<%= link_to 'Edit', edit_podcast_path(@podcast) %> |
-<%= link_to 'Back', podcasts_path %>
+<div class="row">
+	<div class="medium-12 colums">
 
-<h2>All episodes of this podcast</h2>
 
-<%= link_to 'Check for new Episodes', {controller: 'podcasts', action: 'update_feed', id: @podcast.id}, class: 'button success'%>
-<%= link_to 'Delete All Episodes', {controller: 'podcasts', action: 'delete_all_episodes', id: @podcast.id}, class: 'button alert' %>
-<%= link_to 'Download All Episodes', {controller: 'podcasts', action: 'download_all_episodes', id: @podcast.id}, class: 'button' %>
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Link</th>
-      <th>Pub date</th>
-      <th>Guid</th>
-      <th>Subtitle</th>
-      <th>Content</th>
-      <th>Duration</th>
-      <th>Flattr url</th>
-      <th>Tags</th>
-      <th>Icon url</th>
-      <th>Audio file url</th>
-      <th>Filesize</th>
-      <th>Cached</th>
-      <th>Local path</th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+		<h2>All episodes of this podcast</h2>
 
-  <tbody>
-    <% @episodes.each do |episode| %>
-      <tr>
-        <td><%= episode.title %></td>
-        <td><%= episode.link %></td>
-        <td><%= episode.pub_date %></td>
-        <td><%= episode.guid %></td>
-        <td><%= episode.subtitle %></td>
-        <td><%= raw episode.content %></td>
-        <td><%= episode.duration %></td>
-        <td><%= episode.flattr_url %></td>
-        <td><%= episode.tags %></td>
-        <td><%= episode.icon_url_podcast_fallback %><img src="<%= episode.icon_url_podcast_fallback %>" style="height: 100px" /></td>
-        <td><%= episode.audio_file_url %></td>
-        <td><%= episode.filesize %></td>
-        <td><%= episode.cached %></td>
-        <td><%= episode.local_path %></td>
-        <td><%= link_to 'Download', controller: 'episodes', action: 'download', id: episode.id %></td>
-        <td><%= link_to 'Delete Cached File', controller: 'episodes', action: 'delete_cached_file', id: episode.id %></td>
-        <td><%= link_to "Play Next", controller: "episodes", action: "play", id: episode.id %></td>
-        <td><%= link_to 'Show', episode %></td>
-        <td><%= link_to 'Edit', edit_episode_path(episode) %></td>
-        <td><%= link_to 'Destroy', episode, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+		<%= link_to 'Check for new Episodes', {controller: 'podcasts', action: 'update_feed', id: @podcast.id}, class: 'button success'%>
+		<%= link_to 'Delete All Episodes', {controller: 'podcasts', action: 'delete_all_episodes', id: @podcast.id}, class: 'button alert' %>
+		<%= link_to 'Download All Episodes', {controller: 'podcasts', action: 'download_all_episodes', id: @podcast.id}, class: 'button' %>
+		<table>
+			<thead>
+				<tr>
+					<th>Title</th>
+					<th>Link</th>
+					<th>Pub date</th>
+					<th>Guid</th>
+					<th>Subtitle</th>
+					<th>Content</th>
+					<th>Duration</th>
+					<th>Flattr url</th>
+					<th>Tags</th>
+					<th>Icon url</th>
+					<th>Audio file url</th>
+					<th>Filesize</th>
+					<th>Cached</th>
+					<th>Local path</th>
+					<th></th>
+					<th></th>
+					<th></th>
+					<th></th>
+				</tr>
+			</thead>
+
+			<tbody>
+				<% @episodes.each do |episode| %>
+				<tr>
+					<td><%= episode.title %></td>
+					<td><%= episode.link %></td>
+					<td><%= episode.pub_date %></td>
+					<td><%= episode.guid %></td>
+					<td><%= episode.subtitle %></td>
+					<td><%= raw episode.content %></td>
+					<td><%= episode.duration %></td>
+					<td><%= episode.flattr_url %></td>
+					<td><%= episode.tags %></td>
+					<td><%= episode.icon_url_podcast_fallback %><img src="<%= episode.icon_url_podcast_fallback %>" style="height: 100px" /></td>
+					<td><%= episode.audio_file_url %></td>
+					<td><%= episode.filesize %></td>
+					<td><%= episode.cached %></td>
+					<td><%= episode.local_path %></td>
+					<td><%= link_to 'Download', controller: 'episodes', action: 'download', id: episode.id %></td>
+					<td><%= link_to 'Delete Cached File', controller: 'episodes', action: 'delete_cached_file', id: episode.id %></td>
+					<td><%= link_to "Play Next", controller: "episodes", action: "play", id: episode.id %></td>
+					<td><%= link_to 'Show', episode %></td>
+					<td><%= link_to 'Edit', edit_episode_path(episode) %></td>
+					<td><%= link_to 'Destroy', episode, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+				</tr>
+				<% end %>
+			</tbody>
+		</table>
+		
+	</div>
+</div>
