--- a/app/app/views/podcasts/show.html.erb
+++ b/app/app/views/podcasts/show.html.erb
@@ -70,26 +70,16 @@
 		<%= link_to 'Check for new Episodes', {controller: 'podcasts', action: 'update_feed', id: @podcast.id}, class: 'button success'%>
 		<%= link_to 'Delete All Episodes', {controller: 'podcasts', action: 'delete_all_episodes', id: @podcast.id}, class: 'button alert' %>
 		<%= link_to 'Download All Episodes', {controller: 'podcasts', action: 'download_all_episodes', id: @podcast.id}, class: 'button' %>
+		
 		<table>
 			<thead>
 				<tr>
+					<th></th>
 					<th>Title</th>
-					<th>Link</th>
 					<th>Pub date</th>
-					<th>Guid</th>
-					<th>Subtitle</th>
-					<th>Content</th>
 					<th>Duration</th>
-					<th>Flattr url</th>
 					<th>Tags</th>
-					<th>Icon url</th>
-					<th>Audio file url</th>
-					<th>Filesize</th>
-					<th>Cached</th>
-					<th>Local path</th>
-					<th></th>
-					<th></th>
-					<th></th>
+					<th><i class="fa fa-download"></i></th>
 					<th></th>
 				</tr>
 			</thead>
@@ -97,26 +87,30 @@
 			<tbody>
 				<% @episodes.each do |episode| %>
 				<tr>
-					<td><%= episode.title %></td>
-					<td><%= episode.link %></td>
+					<td><%= image_tag episode.icon_url_podcast_fallback, size: '80' %></td>
+					<td><%= link_to episode.title, episode %></td>
 					<td><%= episode.pub_date %></td>
-					<td><%= episode.guid %></td>
-					<td><%= episode.subtitle %></td>
-					<td><%= raw episode.content %></td>
 					<td><%= episode.duration %></td>
-					<td><%= episode.flattr_url %></td>
 					<td><%= episode.tags %></td>
-					<td><%= episode.icon_url_podcast_fallback %><img src="<%= episode.icon_url_podcast_fallback %>" style="height: 100px" /></td>
-					<td><%= episode.audio_file_url %></td>
-					<td><%= episode.filesize %></td>
-					<td><%= episode.cached %></td>
-					<td><%= episode.local_path %></td>
-					<td><%= link_to 'Download', controller: 'episodes', action: 'download', id: episode.id %></td>
-					<td><%= link_to 'Delete Cached File', controller: 'episodes', action: 'delete_cached_file', id: episode.id %></td>
-					<td><%= link_to "Play Next", controller: "episodes", action: "play", id: episode.id %></td>
-					<td><%= link_to 'Show', episode %></td>
-					<td><%= link_to 'Edit', edit_episode_path(episode) %></td>
-					<td><%= link_to 'Destroy', episode, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+					<td>
+						<% if episode.cached? %>
+							<i class="fa fa-check-circle" style="color: green"></i>
+						<% else %>
+							<i class="fa fa-times-circle" style="color: red"></i>
+						<% end %>
+					</td>
+
+					<td>
+						<div>
+							<% if episode.cached? %>
+								<%= link_to 'Delete Cache', controller: 'episodes', action: 'delete_cached_file', id: episode.id %>
+							<% else %>
+								<%= link_to 'Download', controller: 'episodes', action: 'download', id: episode.id%>
+							<% end %>
+						</div>
+						<div><%= link_to 'Edit', edit_episode_path(episode) %></div>
+						<div><%= link_to 'Destroy', episode, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+					</td>
 				</tr>
 				<% end %>
 			</tbody>
